[gd_scene load_steps=11 format=2]

[ext_resource path="res://traffic_light.tscn" type="PackedScene" id=1]
[ext_resource path="res://arts/environment/street.png" type="Texture" id=2]
[ext_resource path="res://pedestrians.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://cars.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 213, 0, 0, 0, 0, 0, 299 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1023, 300, 0, 0, 0, 0, 1025, 377 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 113.5, 125 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 558, 598, 0, 0, 0, 0, 675, 598 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 559, 0, 0, 0, 0, 0, 691, 1 )
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
cars_scene = ExtResource( 5 )
pedestrian_scene = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="traffic_light" parent="." instance=ExtResource( 1 )]
position = Vector2( 717, 448 )
scale = Vector2( 0.162005, 0.162005 )

[node name="cars_spawn_location" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_lane" type="PathFollow2D" parent="cars_spawn_location"]
position = Vector2( 0, 257.079 )
rotation = 1.5708
offset = 44.09

[node name="cars_spawn_location2" type="Path2D" parent="."]
curve = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_lane" type="PathFollow2D" parent="cars_spawn_location2"]
position = Vector2( 1024.07, 341.071 )
rotation = 1.54485
offset = 41.1

[node name="left_lane_spawn_time" type="Timer" parent="."]

[node name="right_lane_spawn_time" type="Timer" parent="."]

[node name="stopping_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stopping_area"]
position = Vector2( 621.5, 303 )
shape = SubResource( 3 )

[node name="pedestrian_spawn_location" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="bottom" type="PathFollow2D" parent="pedestrian_spawn_location"]
position = Vector2( 647.61, 598 )
offset = 89.65

[node name="pedestrian_spawn_location_2" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="top" type="PathFollow2D" parent="pedestrian_spawn_location_2"]
position = Vector2( 678.187, 0.902929 )
rotation = 0.00757558
offset = 119.21

[node name="bottom_spawn_timer" type="Timer" parent="."]

[node name="top_spawn_timer" type="Timer" parent="."]

[connection signal="timeout" from="left_lane_spawn_time" to="." method="_on_left_lane_spawn_time_timeout"]
[connection signal="timeout" from="right_lane_spawn_time" to="." method="_on_right_lane_spawn_time_timeout"]
[connection signal="body_entered" from="stopping_area" to="." method="_on_stopping_area_body_entered"]
[connection signal="body_exited" from="stopping_area" to="." method="_on_stopping_area_body_exited"]
[connection signal="timeout" from="bottom_spawn_timer" to="." method="_on_bottom_spawn_timer_timeout"]
[connection signal="timeout" from="top_spawn_timer" to="." method="_on_top_spawn_timer_timeout"]
